--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -10,7 +10,8 @@
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img src="./bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -41,15 +42,17 @@
         <h2>JavaScript</h2>
         <ul>
           <li>Enter your JavaScript notes here</li>
-          <li>What's this?</li>
-          <li>No JavaScript notes either?</li>
-          <li>Oh... okay...</li>
+          <li>A variable is named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
         </ul>
               </section>
+              <br>
+              <p>I just needed an extra change here</p>
     </main>
 
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./prework-study-guide/script.js"></script>
   </body>
 </html>
